@@ -5,6 +5,7 @@
 package org.chromium.chrome.browser.tabmodel;
 
 import org.chromium.base.ThreadUtils.ThreadChecker;
+import org.chromium.base.TimeUtils;
 import org.chromium.build.annotations.NullMarked;
 import org.chromium.build.annotations.Nullable;
 import org.chromium.chrome.browser.tab.Tab;
@@ -12,7 +13,6 @@ import org.chromium.chrome.browser.tab.Tab;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.ListIterator;
 
@@ -53,25 +53,30 @@ public class PendingTabClosureManager {
         /**
          * Called when a TabClosureEvent is completely cancelled and about to be removed.
          *
-         * @param event The event that's been cancelled.
+         * @param undoRunnable The runnable to run if the event was undone.
          */
         void notifyOnCancelingTabClosure(@Nullable Runnable undoRunnable);
+
+        /** Returns all tabs in the model. */
+        List<Tab> getAllTabs();
     }
 
     /** Represents a set of tabs closed together. */
     static class TabClosureEvent {
-        private final LinkedList<Tab> mClosingTabs;
+        private final List<Tab> mClosingTabs;
         private final HashSet<Tab> mUnhandledTabs;
         private final @Nullable Runnable mUndoRunnable;
+        private final long mTimestamp;
 
         /**
          * @param tabs The list of closing tabs.
          * @param undoRunnable The runnable to run if the event was undone.
          */
         public TabClosureEvent(List<Tab> tabs, @Nullable Runnable undoRunnable) {
-            mClosingTabs = new LinkedList<>(tabs);
+            mClosingTabs = new ArrayList<>(tabs);
             mUnhandledTabs = new HashSet<>(mClosingTabs);
             mUndoRunnable = undoRunnable;
+            mTimestamp = TimeUtils.currentTimeMillis();
         }
 
         /**
@@ -100,13 +105,18 @@ public class PendingTabClosureManager {
         }
 
         /** Returns the list of tabs marked as closing in this event. */
-        public LinkedList<Tab> getList() {
+        public List<Tab> getList() {
             return mClosingTabs;
         }
 
         /** Returns the undo runnable. */
         public @Nullable Runnable getUndoRunnable() {
             return mUndoRunnable;
+        }
+
+        /** Returns the timestamp (in millis) of the tab closure event. */
+        public long getTimestamp() {
+            return mTimestamp;
         }
     }
 
@@ -178,10 +188,7 @@ public class PendingTabClosureManager {
          */
         public void resetRewoundState() {
             mRewoundTabs.clear();
-
-            for (int i = 0; i < mTabModel.getCount(); i++) {
-                mRewoundTabs.add(mTabModel.getTabAt(i));
-            }
+            mRewoundTabs.addAll(mDelegate.getAllTabs());
         }
 
         /**
@@ -199,6 +206,16 @@ public class PendingTabClosureManager {
                 if (tab.getId() == tabId) return tab;
             }
             return null;
+        }
+
+        /**
+         * Adds a {@link Tab} to this internal list.
+         *
+         * @param tab The {@link Tab} to add.
+         * @param index The index to add the tab at.
+         */
+        public void addTab(Tab tab, int index) {
+            mRewoundTabs.add(index, tab);
         }
 
         /**
@@ -239,7 +256,7 @@ public class PendingTabClosureManager {
     private final PendingTabClosureDelegate mDelegate;
 
     /** Representation of a set of tabs that were closed together. */
-    private final LinkedList<TabClosureEvent> mTabClosureEvents = new LinkedList<>();
+    private final ArrayList<TabClosureEvent> mTabClosureEvents = new ArrayList<>();
 
     /**
      * A {@link TabList} that represents the complete list of {@link Tab}s. This is so that
@@ -287,6 +304,22 @@ public class PendingTabClosureManager {
 
         assert mTabClosureEvents.isEmpty();
         mRewoundList.resetRewoundState();
+    }
+
+    /**
+     * Notifies the manager that a tab was added to the model, so the rewound list can be updated.
+     * This is an optimization to avoid a full reset of the rewound list.
+     *
+     * @param tab The tab that was added.
+     * @param index The index where the tab was added.
+     */
+    public void notifyTabAdded(Tab tab, int index) {
+        mThreadChecker.assertOnValidThread();
+        assert !mIsCommittingAllTabClosures
+                : "Modifying mTabClosureEvents while committing all tab closures.";
+
+        assert mTabClosureEvents.isEmpty();
+        mRewoundList.addTab(tab, index);
     }
 
     /**
@@ -420,11 +453,19 @@ public class PendingTabClosureManager {
 
         if (mTabClosureEvents.isEmpty()) return false;
 
-        TabClosureEvent event = mTabClosureEvents.removeLast();
+        TabClosureEvent event = mTabClosureEvents.remove(mTabClosureEvents.size() - 1);
         for (Tab tab : event.getList()) {
             cancelClosureInternal(tab);
         }
         return true;
+    }
+
+    long getMostRecentClosureTime() {
+        mThreadChecker.assertOnValidThread();
+        if (mTabClosureEvents.isEmpty()) return TabModel.INVALID_TIMESTAMP;
+
+        TabClosureEvent event = mTabClosureEvents.get(mTabClosureEvents.size() - 1);
+        return event.getTimestamp();
     }
 
     private void commitClosuresInternal(List<Tab> tabs) {
@@ -455,10 +496,11 @@ public class PendingTabClosureManager {
         // mRewoundTabs 0 1 2 3 4 5
         int prevIndex = -1;
         final int stopIndex = mRewoundList.indexOf(tab);
+        List<Tab> tabs = mDelegate.getAllTabs();
         for (int rewoundIndex = 0; rewoundIndex < stopIndex; rewoundIndex++) {
             Tab rewoundTab = mRewoundList.getTabAt(rewoundIndex);
-            if (prevIndex == mTabModel.getCount() - 1) break;
-            if (rewoundTab == mTabModel.getTabAt(prevIndex + 1)) prevIndex++;
+            if (prevIndex == tabs.size() - 1) break;
+            if (rewoundTab == tabs.get(prevIndex + 1)) prevIndex++;
         }
 
         // Figure out where to insert the tab. Just add one to prevIndex, as -1 represents the
